# lazycon

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  grammar  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
lazycon/: __init__.py  console.py  exceptions.py  main.py  parser.py  render.py  renderer.py  scope.py  statements.py  thunk.py  utils.py  visitor.py  wrappers.py
lazycon/semantics/: analyzer.py  locals.py  visitor.py
resource_manager/: __init__.py  arguments.py  console.py  exceptions.py  expressions.py  helpers.py  interpreter.py  manager.py  parser.py  registration_system.py  renderer.py  resource_manager.py  scope.py  scopes.py  semantics.py  statements.py  structure.py  structures.py  syntax_tree.py  token.py  tokenizer.py  tree_analysis.py  utils.py  visitor.py  wrappers.py
resource_manager/legacy/: registration_system.py  utils.py
resource_manager/semantics/: __init__.py  analyzer.py  visitor.py
resource_manager/tests/: test_manager.py  test_parser.py  test_registration.py
tests/: conftest.py  helpers.py  requirements.txt  test_engine.py  test_manager.py  test_parser.py  test_registration.py  test_semantics.py  utils.py
tests/expressions/: comments.config  comprehensions.config  getattr.config  if_.config  lambda_.config  literals.config  module.config  nested_partial.config  operators.config  other_cases.config  slices.config  tail.config  types.config
tests/extends/: cycle_import.config  cycle_import2.config  imports.config  (+1 more)
transpiler/: __init__.py  parser.py  structures.py  token.py  tokenizer.py
(+91 files in other folders)
