[project]
name = 'lazycon'
dynamic = ['version']
description = 'Easy config files in pure Python'
readme = 'README.md'
requires-python = '>=3.6'
license = { file = 'LICENSE' }
keywords = ['config', 'lazy', 'interpreter']
authors = [
    { name = 'Max', email = 'max@ira-labs.com' }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
]
dependencies = []

[project.urls]
'Homepage' = 'https://github.com/maxme1/lazycon'
'Bug Tracker' = 'https://github.com/maxme1/lazycon/issues'
'Source' = 'https://github.com/maxme1/lazycon'

[project.scripts]
lazycon = 'lazycon.console:main'

[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['lazycon']

[tool.setuptools.package-data]
lazycon = [
    'py.typed',
]

[tool.setuptools.dynamic]
version = { attr = 'lazycon.__version__.__version__' }
